Claude improvements